--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,15 @@ dependencies:
   cupertino_icons: ^0.1.2
   sqflite: ^1.1.5
   date_format: ^1.0.6
+  flutter_launcher_icons: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "assets/icon/icon.png"
+  android: true
 
 
 # For information on the generic Dart part of this file, see the
